public interface Reporter{
    boolean reportFault();

}
