public enum WorkerPosition {

    MANUAL_WORKER,
    MEDIC,
    MANAGER

}
